--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <!-- link to style sheet -->
         <link type = 'text/css' rel = 'stylesheet' href = 'internalstyle.css'>
-        <title>qCBHS History Timeline</title>
+        <title>CBHS History Timeline</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
         </head>
