"worked on adding a view more button to text, removed images"

--- a/index.html
+++ b/index.html
@@ -37,18 +37,19 @@
             <div class = 'first-date'>1881</div>
             <div class = 'first-line'></div>
             <div class = 'first-image'>
-                <img src = 'artcenter.jpeg' alt = 'the christchurch art center entrance' style = 'width: 300px; height: 200px;'>
             </div>
             <div class = 'first-info'>
                 <h2>CBHS established</h2> 
                 <p>
                     Christchurch boys high is established in the arts center with 82 boys and 7 'masters'. School sports is done at lancaster park. The prime purpose of boys high was to prepare boys in an academical manner for the newly formed Canterbury College(now the University of Canterbury).
                 </p>
+                <button id = 'first-button'>
+                   <br> <a href = 'viewmorestyle.css'>View More</a>
+                </button>
             </div>
             <div class = 'second-date'>1883</div>
             <div class = 'second-line'></div>
             <div class = 'second-image'>
-                <img src = 'firstmonitor.jpeg' alt = 'school photo of boys seen in the 1900's' style = 'width: 250px; height: 175px;'>
             </div>
             <div class = 'second-info'>
                 <h2>First monitors appointed</h2> 
@@ -62,9 +63,9 @@
                 <img src='' alt='' style='width: 250px; height: 175px;'>
             </div>
             <div class='third-info'>
-                <h2></h2>
+                <h2>Old Boys Association Formed</h2>
                 <p>
-                    
+                    The old boys association was formed on the 19th of July, 1912. The association was created to allow old boys of the school to stay in touch with their proud history and stay in contact with friends and other boys igh achievements long after they had left the school. The old boys association has also created the Altiora Peto Medal which is awarded to an old boy who best reflects the school motto "I seek higher things" and actions are inspiration to the current boys to do better.
                 </p>
             </div>
         </div>
