'trialling fonts, formatting for title, information'

--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
                 <p>
                     Christchurch boys high is established in the arts center with 82 boys and 7 'masters'. School sports is done at lancaster park. The prime purpose of boys high was to prepare boys in an academical manner for the newly formed Canterbury College(now the University of Canterbury).
                 </p>
-                <button id = 'first-button'>
-                   <br> <a href = 'viewmorestyle.css'>View More</a>
-                </button>
+                <button class = 'first-button' id = 'first-button' onclick = ''><br>View More</button>
             </div>
             <div class = 'second-date'>1883</div>
             <div class = 'second-line'></div>
