--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!-- link to javascript-->
+        <script type="application/javascript" src="button.js"></script>
         <!-- link to style sheet -->
-        <link type = 'text/css' rel = 'stylesheet' href = 'internalstyle.css'>
+        <link id = 'pagestyle' type = 'text/css' rel = 'stylesheet' href = 'internalstyle.css'>
         <title>CBHS History Timeline</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
@@ -10,9 +12,8 @@
         <header>
         <!-- simple header for timeline sticks with scroll and can hold navigation -->
         <h1>History of CBHS</h1>
-        <div class = 'bluesquare'></div>
-        <div class = 'bluetriangle'></div>
-
+            <div class = 'bluesquare'></div>
+            <div class = 'bluetriangle'></div>
         <!-- nav bar on header -->
         <nav>
             <!-- nav bar displayed in list-->
@@ -34,37 +35,41 @@
         <!--  timeline class used to seperate heading with the timeline content -->
         <div class = 'timeline'>
             <div class = 'line'></div>
-            <div class = 'first-date'>1881</div>
-            <div class = 'first-line'></div>
-            <div class = 'first-image'>
-            </div>
-            <div class = 'first-info'>
-                <h2>CBHS established</h2> 
-                <p>
-                    Christchurch boys high is established in the arts center with 82 boys and 7 'masters'. School sports is done at lancaster park. The prime purpose of boys high was to prepare boys in an academical manner for the newly formed Canterbury College(now the University of Canterbury).
-                </p>
-                <button class = 'first-button' id = 'first-button' onclick = ''><br>View More</button>
-            </div>
-            <div class = 'second-date'>1883</div>
-            <div class = 'second-line'></div>
-            <div class = 'second-image'>
-            </div>
-            <div class = 'second-info'>
-                <h2>First monitors appointed</h2> 
-                <p>
-                    CBHS' first monitors were appointed in 1883 sortly after the creation of the school, these monitors were made to give out fines and make sure the boys behaved.
-                </p>
-            </div>
-            <div class='third-date'>1912</div>
-            <div class='third-line'></div>
-            <div class='thrid-image'>
-                <img src='' alt='' style='width: 250px; height: 175px;'>
-            </div>
-            <div class='third-info'>
-                <h2>Old Boys Association Formed</h2>
-                <p>
-                    The old boys association was formed on the 19th of July, 1912. The association was created to allow old boys of the school to stay in touch with their proud history and stay in contact with friends and other boys igh achievements long after they had left the school. The old boys association has also created the Altiora Peto Medal which is awarded to an old boy who best reflects the school motto "I seek higher things" and actions are inspiration to the current boys to do better.
-                </p>
+                <div class = 'first-date'>1881</div>
+                <div class = 'first-line'></div>
+                <div class = 'first-info'>
+                    <h2>CBHS established</h2> 
+                    <p>
+                        Christchurch boys high is established in the arts center with 82 boys and 7 'masters'. School sports is done at lancaster park. The prime purpose of boys high was to prepare boys in an academical manner for the newly formed Canterbury College(now the University of Canterbury).<br>
+                    </p>
+                    <button class = 'first-button-more' id = 'first-button-more' onclick="initate();">View More</button>
+                    <button class='first-button-less' id='first-button-less' onclick="initate();">View Less</button>
+                </div>
+            <div id='container1'>
+                <div class = 'second-date'>1883</div>
+                <div class = 'second-line'></div>
+                <div class = 'second-info'>
+                    <h2>First monitors appointed</h2> 
+                    <p>
+                        CBHS' first monitors were appointed in 1883 sortly after the creation of the school, these monitors were made to give out fines and make sure the boys behaved.
+                    </p>
+                </div>
+                <div class='third-date'>1912</div>
+                <div class='third-line'></div>
+                <div class='third-info'>
+                    <h2>Old Boys Association Formed</h2>
+                    <p>
+                        The old boys association was formed on the 19th of July, 1912. The association was created to allow old boys of the school to stay in touch with their proud history and stay in contact with friends and other boys igh achievements long after they had left the school. The old boys association has also created the Altiora Peto Medal which is awarded to an old boy who best reflects the school motto "I seek higher things" and actions are inspiration to the current boys to do better.
+                    </p>
+                </div>
+                <div class='fourth-date'>1916</div>
+                <div class='fourth-line'></div>
+                <div class='fourth-info'>
+                    <h2>First ANZAC service held</h2>
+                    <p>
+                        An ANZAC service is held in the now 'big room' to commemorate the school's losses of World War One.
+                    </p>
+                </div>
             </div>
         </div>
     </body>
