'worked on view more button, changed font, addd some info'

--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
         <script type="application/javascript" src="button.js"></script>
         <!-- link to style sheet -->
         <link id = 'pagestyle' type = 'text/css' rel = 'stylesheet' href = 'internalstyle.css'>
+        <!-- Title of page -->
         <title>CBHS History Timeline</title>
+        <!-- Linking fonts -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@400&display=swap" rel="stylesheet">
+
         </head>
         <header>
         <!-- simple header for timeline sticks with scroll and can hold navigation -->
@@ -42,8 +46,8 @@
                     <p>
                         Christchurch boys high is established in the arts center with 82 boys and 7 'masters'. School sports is done at lancaster park. The prime purpose of boys high was to prepare boys in an academical manner for the newly formed Canterbury College(now the University of Canterbury).<br>
                     </p>
-                    <button class = 'first-button-more' id = 'first-button-more' onclick="initate();">View More</button>
-                    <button class='first-button-less' id='first-button-less' onclick="initate();">View Less</button>
+                    <button class = 'first-button-more' id = 'first-button-more' onclick="viewmore1();">View More</button>
+                    <button class = 'first-button-less' id='first-button-less' onclick="viewless2();">View Less</button>
                 </div>
             <div id='container1'>
                 <div class = 'second-date'>1883</div>
@@ -61,13 +65,15 @@
                     <p>
                         The old boys association was formed on the 19th of July, 1912. The association was created to allow old boys of the school to stay in touch with their proud history and stay in contact with friends and other boys igh achievements long after they had left the school. The old boys association has also created the Altiora Peto Medal which is awarded to an old boy who best reflects the school motto "I seek higher things" and actions are inspiration to the current boys to do better.
                     </p>
+                    <button class='second-button-more' id='second-button-more' onclick="viewmore2();">View More</button>
+                    <button class='second-button-less' id='second-button-less' onclick="viewless2();">View Less</button>
                 </div>
                 <div class='fourth-date'>1916</div>
                 <div class='fourth-line'></div>
                 <div class='fourth-info'>
                     <h2>First ANZAC service held</h2>
                     <p>
-                        An ANZAC service is held in the now 'big room' to commemorate the school's losses of World War One.
+                        An ANZAC service is held in the original 'big room' to commemorate the school's losses of World War One. In turn it was said the headmaster of the time Mr C.E Bevan-Brown would read out the names of Old Boys who had died fighting in World War One, and even become very emotionally moved talking about these losses.
                     </p>
                 </div>
             </div>
