'added a bunch of information on timeline, small tweks, got view more button working nearly perfectly even though it took a long time'

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@400&display=swap" rel="stylesheet">
-
-        </head>
-        <header>
+    </head>
+    <header>
         <!-- simple header for timeline sticks with scroll and can hold navigation -->
         <h1>History of CBHS</h1>
             <div class = 'bluesquare'></div>
@@ -39,6 +38,7 @@
         <!--  timeline class used to seperate heading with the timeline content -->
         <div class = 'timeline'>
             <div class = 'line'></div>
+            <div id='container1'>
                 <div class = 'first-date'>1881</div>
                 <div class = 'first-line'></div>
                 <div class = 'first-info'>
@@ -46,10 +46,7 @@
                     <p>
                         Christchurch boys high is established in the arts center with 82 boys and 7 'masters'. School sports is done at lancaster park. The prime purpose of boys high was to prepare boys in an academical manner for the newly formed Canterbury College(now the University of Canterbury).<br>
                     </p>
-                    <button class = 'first-button-more' id = 'first-button-more' onclick="viewmore1();">View More</button>
-                    <button class = 'first-button-less' id='first-button-less' onclick="viewless2();">View Less</button>
                 </div>
-            <div id='container1'>
                 <div class = 'second-date'>1883</div>
                 <div class = 'second-line'></div>
                 <div class = 'second-info'>
@@ -58,22 +55,46 @@
                         CBHS' first monitors were appointed in 1883 sortly after the creation of the school, these monitors were made to give out fines and make sure the boys behaved.
                     </p>
                 </div>
+                </div>
                 <div class='third-date'>1912</div>
                 <div class='third-line'></div>
                 <div class='third-info'>
                     <h2>Old Boys Association Formed</h2>
-                    <p>
-                        The old boys association was formed on the 19th of July, 1912. The association was created to allow old boys of the school to stay in touch with their proud history and stay in contact with friends and other boys igh achievements long after they had left the school. The old boys association has also created the Altiora Peto Medal which is awarded to an old boy who best reflects the school motto "I seek higher things" and actions are inspiration to the current boys to do better.
+                    <p id = 'viewlessp1'>
+                        The old boys association was formed on the 19th of July, 1912. The association was created to allow old boys of the school to stay in touch with their proud history and stay in contact with friends and other boys high achievements long after they had left the school.
                     </p>
-                    <button class='second-button-more' id='second-button-more' onclick="viewmore2();">View More</button>
-                    <button class='second-button-less' id='second-button-less' onclick="viewless2();">View Less</button>
+                    <p id = 'viewmorep1'>
+                        The old boys association was formed on the 19th of July, 1912. The association was created to allow old boys of the
+                        school to stay in touch with their proud history and stay in contact with friends and other boys high achievements long
+                        after they had left the school. The old boys association has also created the Altiora Peto Medal which is awarded to an old boy who best reflects the
+                        school motto "I seek higher things" and actions are inspiration to the current boys to do better.
+                    </p>
+                    <button class='first-button-more' id='first-button-more' onclick="viewmore1();">View More</button>
+                    <button class='first-button-less' id='first-button-less' onclick="viewless1();">View Less</button>
                 </div>
+                <div id='container1'>
                 <div class='fourth-date'>1916</div>
                 <div class='fourth-line'></div>
                 <div class='fourth-info'>
                     <h2>First ANZAC service held</h2>
                     <p>
                         An ANZAC service is held in the original 'big room' to commemorate the school's losses of World War One. In turn it was said the headmaster of the time Mr C.E Bevan-Brown would read out the names of Old Boys who had died fighting in World War One, and even become very emotionally moved talking about these losses.
+                    </p>
+                </div>
+                <div class='fifth-date'>1917</div>
+                <div class='fifth-line'></div>
+                <div class='fifth-info'>
+                    <h2>Adams house is opened</h2>
+                    <p>
+                        Adams house is opened, tasked to allow talented boys from out of school zoning to attend Christchurch Boys High. 
+                    </p>
+                </div>
+                <div class='sixth-date'>1926</div>
+                <div class='sixth-line'></div>
+                <div class='sixth-info'>
+                    <h2>Boys High is moved to riccarton</h2>
+                    <p>
+                        Boy's High is moved from the city center as Christchurch was becoming to big a town for a high school. The new land is donated by the Deans family and is 28 acres of space.
                     </p>
                 </div>
             </div>
