"bunch of information added, nearly finished home page"

--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
                 <div class='third-info'>
                     <h2>Old Boys Association Formed</h2>
                     <p id = 'viewlessp1'>
-                        The old boys association was formed on the 19th of July, 1912. The association was created to allow old boys of the school to stay in touch with their proud history and stay in contact with friends and other boys high achievements long after they had left the school.
+                        The old boys association was formed on the 19th of July, 1912. The association was created to allow old boys of the school to stay in touch with their proud history and stay in contact with friends and other boys high achievements long after they had left the school.<br>
                     </p>
                     <p id = 'viewmorep1'>
                         The old boys association was formed on the 19th of July, 1912. The association was created to allow old boys of the
                         school to stay in touch with their proud history and stay in contact with friends and other boys high achievements long
                         after they had left the school. The old boys association has also created the Altiora Peto Medal which is awarded to an old boy who best reflects the
-                        school motto "I seek higher things" and actions are inspiration to the current boys to do better.
+                        school motto "I seek higher things" and actions are inspiration for the current boys to do better.
                     </p>
-                    <button class='first-button-more' id='first-button-more' onclick="viewmore1();">View More</button>
-                    <button class='first-button-less' id='first-button-less' onclick="viewless1();">View Less</button>
+                    <button class='first-button-more' id='first-button-more' onclick="viewmore1();">- View More</button>
+                    <button class='first-button-less' id='first-button-less' onclick="viewless1();">- View Less</button>
                 </div>
                 <div id='container1'>
                 <div class='fourth-date'>1916</div>
@@ -96,6 +96,46 @@
                     <p>
                         Boy's High is moved from the city center as Christchurch was becoming to big a town for a high school. The new land is donated by the Deans family and is 28 acres of space.
                     </p>
+                </div>
+                <div class='seventh-date'>1939</div>
+                <div class='seventh-line'></div>
+                <div class='seventh-info'>
+                    <h2>Old Boys serve in WWII</h2>
+                    <p>
+                        1600 Old Boys serve in WWII as well as 11 staff. 200 of these Old Boys lose their lives.
+                    </p>
+                </div>
+                <div class='eigth-date'>1997</div>
+                <div class='eigth-line'></div>
+                <div class='eigth-info'>
+                    <h2>The new hall is opened</h2>
+                    <p>
+                        The new school hall is opened to the public. It is far more modern then the one before it and will be used for another 18 years before the current hall is built.
+                    </p>
+                </div>
+                <div class='ninth-date'>2005</div>
+                <div class='ninth-line'></div>
+                <div class='ninth-info'>
+                    <h2>Prince William visits the school</h2>
+                    <p>
+                        Prince William visits CBHS constantly under 3 levels of massive secruity. He speaks at an assembly for the boys. 
+                    </p>
+                    <div class='tenth-date'>2015</div>
+                    <div class='tenth-line'></div>
+                    <div class='tenth-info'>
+                        <h2>The hall is demolished</h2>
+                        <p>
+                            eeeeeeeeeeee
+                        </p>
+                    </div>
+                    <div class='eleventh-date'>2021</div>
+                    <div class='eleventh-line'></div>
+                    <div class='eleventh-info'>
+                        <h2>New school blocks are opened</h2>
+                        <p>
+
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
