'finished information for main page, switched up header and other stuff'

--- a/index.html
+++ b/index.html
@@ -120,22 +120,23 @@
                     <p>
                         Prince William visits CBHS constantly under 3 levels of massive secruity. He speaks at an assembly for the boys. 
                     </p>
-                    <div class='tenth-date'>2015</div>
-                    <div class='tenth-line'></div>
-                    <div class='tenth-info'>
-                        <h2>The hall is demolished</h2>
-                        <p>
-                            eeeeeeeeeeee
-                        </p>
-                    </div>
-                    <div class='eleventh-date'>2021</div>
-                    <div class='eleventh-line'></div>
-                    <div class='eleventh-info'>
-                        <h2>New school blocks are opened</h2>
-                        <p>
-
-                        </p>
-                    </div>
+                </div>
+                <div class='tenth-date'>2015</div>
+                <div class='tenth-line'></div>
+                <div class='tenth-info'>
+                    <h2>The hall is demolished</h2>
+                    <p>
+                        The hall established in 1997 is demolsished to be replaced by a new multimillion, the construction of the new hall would begin in 2016 and be finished as well as opened in late 2017. The new hall contained state of the art facilities for school assemblies as well as productions. The sense of history contained within the hall can be felt when entering.
+                    </p>
+                 </div>
+                <div class='eleventh-date'>2021</div>
+                <div class='eleventh-line'></div>
+                <div class='eleventh-info'>
+                    <h2>New school blocks are opened</h2>
+                    <p>
+                        The old Caldwell and Caddick blocks are opened for students and staff. The buildings are named after the well known and appreciated headmasters of boys high Mr.Caldwell and Mr.Caddick respectivly. These blocks were builot to replace the older blocks forcibly demolsished only a few years prior.
+                    </p>
+                </div>
                 </div>
             </div>
         </div>
