'started working on second page'

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <!-- link to javascript-->
         <script type="application/javascript" src="button.js"></script>
         <!-- link to style sheet -->
-        <link id = 'pagestyle' type = 'text/css' rel = 'stylesheet' href = 'internalstyle.css'>
+        <link id = 'pagestyle' type = 'text/css' rel = 'stylesheet' href = 'indexstyle.css'>
         <!-- Title of page -->
         <title>CBHS History Timeline</title>
         <!-- Linking fonts -->
@@ -15,15 +15,15 @@
     <header>
         <!-- simple header for timeline sticks with scroll and can hold navigation -->
         <h1>History of CBHS</h1>
-            <div class = 'bluesquare'></div>
-            <div class = 'bluetriangle'></div>
+        <div class = 'bluesquare'></div>
+        <div class = 'bluetriangle'></div>
         <!-- nav bar on header -->
         <nav>
             <!-- nav bar displayed in list-->
             <ul>
                 <!-- links to secondary sites-->
                 <li>
-                    <a href  = 'collegematch.html'>The College Match</a>
+                    <a href  = 'collegematch.html'>College Match</a>
                 </li>
                 <li>
                     <a href  = 'headmasters.html'>headmasters</a>
@@ -137,7 +137,7 @@
                         The old Caldwell and Caddick blocks are opened for students and staff. The buildings are named after the well known and appreciated headmasters of boys high Mr.Caldwell and Mr.Caddick respectivly. These blocks were builot to replace the older blocks forcibly demolsished only a few years prior.
                     </p>
                 </div>
-                </div>
+
             </div>
         </div>
     </body>
