'worked on collegematch.html page, information, tried to get some images that weren't cc'

--- a/collegematch.html
+++ b/collegematch.html
@@ -36,13 +36,20 @@
             <img src = '' alt = ''>
         </section>
         <section id='text1' class='text1'>
-            <p>poopoo</p>
+            <h1>
+                An Overview
+            </h1>
+            <p>
+                The College match as it is colloquially called by students, staff and community is an annual rugby match bewteen Christ College and Christchurch Boys High first XV rugby teams. It is seen by many as one of the most important school events of the year and brings together students and staff in a collective rooting for their team.
+            </p> 
         </section>
         <section id='image2' class='image2'>
             <img src='' alt=''>
         </section>
         <section id='text2' class='text2'>
-        
+            <h1>Origins and History of the Match</h1>
+            <p>
+                The first College match was held in 1892 only 11 year after the formation of Christchurch Boys, located in the art center across the road from Christ College. This match ended 34-0 to Christ's and to this day stands as their largest win ever.  After this the match became an annual event only not going ahead in dire cricumstances. Boys' High has since one 84 out of the 136 games with College winning 43 and 9 ending in draws.</p>
         </section>
     </body>
 </html>
