'tried to fix up messy css files, kinda ruined it just seeing if its working'

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <!-- link to javascript-->
         <script type="application/javascript" src="button.js"></script>
         <!-- link to style sheet -->
-        <link id = 'pagestyle' type = 'text/css' rel = 'stylesheet' href = 'indexstyle.css'>
+        <link id = 'pagestyle' type = 'text/css' rel = 'stylesheet' href = 'styles.css'>
+        <link id='pagestyle' type='text/css' rel='stylesheet' href='indexstyle.css'>
         <!-- Title of page -->
         <title>CBHS History Timeline</title>
         <!-- Linking fonts -->
