--- a/collegematch.html
+++ b/collegematch.html
@@ -2,6 +2,7 @@
 <html>
     <header>
         <!-- link to style sheet -->
+        <link id='pagestyle' type='text/css' rel='stylesheet' href='styles.css'>
         <link id='pagestyle' type='text/css' rel='stylesheet' href='collegestyle.css'>
         <!-- Title of page -->
         <title>The College Match</title>
