'worked on secondary pages'

--- a/collegematch.html
+++ b/collegematch.html
@@ -27,7 +27,7 @@
                     <a href='headmasters.html'>headmasters</a>
                 </li>
                 <li>
-                <a href='cbhswarefforts.html'>war efforts</a>
+                <a href='warefforts.html'>war efforts</a>
                 </li>    
             </ul>
         </nav>
