--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a href  = 'headmasters.html'>headmasters</a>
                 </li>
                 <!-- I took this nav out of the li tag so that the seperating bar would not be on the end. No implications as of yet-->
-                    <a href  = 'cbhswarefforts.html'>war efforts</a>
+                    <a href  = 'warefforts.html'>war efforts</a>
             </ul>
         </nav>
     </header>
@@ -56,24 +56,24 @@
                         CBHS' first monitors were appointed in 1883 sortly after the creation of the school, these monitors were made to give out fines and make sure the boys behaved.
                     </p>
                 </div>
-                </div>
-                <div class='third-date'>1912</div>
-                <div class='third-line'></div>
-                <div class='third-info'>
-                    <h2>Old Boys Association Formed</h2>
-                    <p id = 'viewlessp1'>
-                        The old boys association was formed on the 19th of July, 1912. The association was created to allow old boys of the school to stay in touch with their proud history and stay in contact with friends and other boys high achievements long after they had left the school.<br>
-                    </p>
-                    <p id = 'viewmorep1'>
-                        The old boys association was formed on the 19th of July, 1912. The association was created to allow old boys of the
-                        school to stay in touch with their proud history and stay in contact with friends and other boys high achievements long
-                        after they had left the school. The old boys association has also created the Altiora Peto Medal which is awarded to an old boy who best reflects the
-                        school motto "I seek higher things" and actions are inspiration for the current boys to do better.
-                    </p>
-                    <button class='first-button-more' id='first-button-more' onclick="viewmore1();">- View More</button>
-                    <button class='first-button-less' id='first-button-less' onclick="viewless1();">- View Less</button>
-                </div>
-                <div id='container1'>
+            </div>
+            <div class='third-date'>1912</div>
+            <div class='third-line'></div>
+            <div class='third-info'>
+                <h2>Old Boys Association Formed</h2>
+                <p id = 'viewlessp1'>
+                    The old boys association was formed on the 19th of July, 1912. The association was created to allow old boys of the school to stay in touch with their proud history and stay in contact with friends and other boys high achievements long after they had left the school.<br>
+                </p>
+                <p id = 'viewmorep1'>
+                    The old boys association was formed on the 19th of July, 1912. The association was created to allow old boys of the
+                    school to stay in touch with their proud history and stay in contact with friends and other boys high achievements long
+                    after they had left the school. The old boys association has also created the Altiora Peto Medal which is awarded to an old boy who best reflects the
+                    school motto "I seek higher things" and actions are inspiration for the current boys to do better.
+                </p>
+                <button class='first-button-more' id='first-button-more' onclick="viewmore();">- View More</button>
+                <button class='first-button-less' id='first-button-less' onclick="viewless();">- View Less</button>
+            </div>
+            <div id='container1'>
                 <div class='fourth-date'>1916</div>
                 <div class='fourth-line'></div>
                 <div class='fourth-info'>
@@ -138,7 +138,6 @@
                         The old Caldwell and Caddick blocks are opened for students and staff. The buildings are named after the well known and appreciated headmasters of boys high Mr.Caldwell and Mr.Caddick respectivly. These blocks were builot to replace the older blocks forcibly demolsished only a few years prior.
                     </p>
                 </div>
-
             </div>
         </div>
     </body>
