--- a/warefforts.html
+++ b/warefforts.html
@@ -3,16 +3,16 @@
 <header>
     <!-- link to style sheet -->
     <link id='pagestyle' type='text/css' rel='stylesheet' href='styles.css'>
-    <link id='pagestyle' type='text/css' rel='stylesheet' href='headmasterstyle.css'>
+    <link id='pagestyle' type='text/css' rel='stylesheet' href='wareffortstyle.css'>
     <!-- Title of page -->
-    <title>Headmasters</title>
+    <title>War Efforts</title>
     <!-- Linking fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@400&display=swap" rel="stylesheet">
     </head>
     <h1>
-        Headmasters
+        War Efforts
     </h1>
     <div class='bluesquare'></div>
     <div class='bluetriangle'></div>
@@ -27,7 +27,7 @@
                 <a href='collegematch.html'>College Match</a>
             </li>
             <li>
-                <a href='warefforts.html'>war efforts</a>
+                <a href='headmasters.html'>Headmasters</a>
             </li>
         </ul>
     </nav>
@@ -38,20 +38,27 @@
     </section>
     <section id='text1' class='text1'>
         <h1>
-            Overview
+            An Overview
         </h1>
         <p>
-            The headmaster's of CBHS date back to the beginning of the school in 1881 with the founding headmaster being Dr. Thomas Nolan Miller.
+            The College match as it is colloquially called by students, staff and community is an annual rugby match
+            bewteen Christ College and Christchurch Boys High first XV rugby teams. It is seen by many as one of the
+            most important school events of the year and brings together students and staff in a collective rooting for
+            their team.
         </p>
     </section>
     <section id='image2' class='image2'>
         <img src='' alt=''>
     </section>
     <section id='text2' class='text2'>
-        <h1></h1>
+        <h1>Origins and History of the Match</h1>
         <p>
-
-        </p>
+            The first College match was held in 1892 only 11 year after the formation of Christchurch Boys, located in
+            the art center across the road from Christ College. This match ended 34-0 to Christ's and to this day stands
+            as their largest win ever. After this the match became an annual event only not going ahead in dire
+            cricumstances. Boys' High has since one 84 out of the 136 games with College winning 43 and 9 ending in
+            draws.</p>
     </section>
 </body>
+
 </html>
