'added image, finished sites, just need to test'

--- a/collegematch.html
+++ b/collegematch.html
@@ -34,7 +34,7 @@
     </header>
     <body>
         <section id = 'image1' class = 'image1'>
-            <img src = '' alt = ''>
+            <img src = 'crest.jpg' alt = 'cbhs crest' style = 'width: 254.2px; height: 294px;'>
         </section>
         <section id='text1' class='text1'>
             <h1>
@@ -43,9 +43,6 @@
             <p>
                 The College match as it is colloquially called by students, staff and community is an annual rugby match bewteen Christ College and Christchurch Boys High first XV rugby teams. It is seen by many as one of the most important school events of the year and brings together students and staff in a collective rooting for their team.
             </p> 
-        </section>
-        <section id='image2' class='image2'>
-            <img src='' alt=''>
         </section>
         <section id='text2' class='text2'>
             <h1>Origins and History of the Match</h1>
