--- a/headmasters.html
+++ b/headmasters.html
@@ -33,24 +33,59 @@
     </nav>
 </header>
 <body>
-    <section id='image1' class='image1'>
-        <img src='' alt=''>
-    </section>
+            <section id='image1' class='image1'>
+            <img src='crest.jpg' alt='cbhs crest' style='width: 254.2px; height: 294px;'>
+            </section>
     <section id='text1' class='text1'>
         <h1>
             Overview
         </h1>
         <p>
-            The headmaster's of CBHS date back to the beginning of the school in 1881 with the founding headmaster being Dr. Thomas Nolan Miller.
+            The headmaster's of CBHS date back to the beginning of the school in 1881 with the founding headmaster being Dr. Thomas Nolan Miller. He served as for two years and was the first of many respectable headmasters that would run the school in years to come. Mr A.E. Caddick and Mr C.F.S Caldwell who have both had school facilities named in honour of them. Both blocks recently rebuilt.
         </p>
     </section>
     <section id='image2' class='image2'>
         <img src='' alt=''>
     </section>
     <section id='text2' class='text2'>
-        <h1></h1>
+        <h1>Headmasters</h1>
         <p>
-
+            <ul>
+                <li>
+                    1881 - 1884 Dr. Thomas Nolan Miller is the first headmaster of boys high.
+                </li>
+                <li>
+                    1884 - 1921 C.E Bevan-Brown takes over as headmaster of cbhs for 37 years during WW I.
+                </li>
+                <li>
+                    1921 - 1940 G.J. Lancaster serves another 19 years after Bevan-Brown.
+                </li>
+                <li>
+                    1941 - 1950 A.E. Caddick takes over and serves for 9 years during WW II, a school building is named after him in his honour.
+                </li>
+                <li> 
+                    1951 - 1959 J. Leggat serves 8 years after Caddick.
+                </li>
+                <li>
+                    1950 - 1976 C.F.S Caldwell serves for the second longest term at 26 years, a building is named in his honour.
+                </li>
+                <li>
+                    1976 - 1988 I.D. Leggat is headmaster for 12 years.
+                </li>
+                <li>
+                    1988 - 1991 Z.R. Kidd serves for 3 years.
+                </li>
+                <li>
+                    1992 - 2003 C.W. Croudis serves after the turn of the century for 11 years.
+                </li>
+                <li>
+                    2003 - 2012 T.J. McIntyre is headmaster for 9 years.
+                </li>
+                <li>
+                    2013 - present N.C. Hill takes over as headmaster until the forseeable future.
+                </li>
+            </ul>
+            <br><br><br><br>
         </p>
     </section>
 </body>
