--- a/warefforts.html
+++ b/warefforts.html
@@ -33,31 +33,27 @@
     </nav>
 </header>
 <body>
-    <section id='image1' class='image1'>
-        <img src='' alt=''>
-    </section>
+            <section id='image1' class='image1'>
+            <img src='crest.jpg' alt='cbhs crest' style='width: 254.2px; height: 294px;'>
+            </section>
     <section id='text1' class='text1'>
         <h1>
-            An Overview
+            Overview
         </h1>
         <p>
-            The College match as it is colloquially called by students, staff and community is an annual rugby match
-            bewteen Christ College and Christchurch Boys High first XV rugby teams. It is seen by many as one of the
-            most important school events of the year and brings together students and staff in a collective rooting for
-            their team.
+            Staff and students, current and old, each year gather on the 25th of may to honour the old boys and staff that lost their lives in the Gallipoli campaign 1915. In turn those who fought in multiple different conflicts adorn the wall of the main block in honour of their sacrifice.    
         </p>
     </section>
     <section id='image2' class='image2'>
         <img src='' alt=''>
     </section>
     <section id='text2' class='text2'>
-        <h1>Origins and History of the Match</h1>
+        <h1>
+            losses
+        </h1>
         <p>
-            The first College match was held in 1892 only 11 year after the formation of Christchurch Boys, located in
-            the art center across the road from Christ College. This match ended 34-0 to Christ's and to this day stands
-            as their largest win ever. After this the match became an annual event only not going ahead in dire
-            cricumstances. Boys' High has since one 84 out of the 136 games with College winning 43 and 9 ending in
-            draws.</p>
+            By the end of world war one 786 boys high students students had enlisted in the war and over 20% of those students died. Furthermore in WW II  1600 boys served and more than 12% died. "One of the duties of a great school is to teach true values. Worthy examples have been given by many of those who were once boys at this school" - Howard Kippenberger, New Zealand Soldier and former CBHS old boy.
+         </p>
     </section>
 </body>
 
