'finished website, view more still not working'

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <p id = 'viewlessp1'>
                     The old boys association was formed on the 19th of July, 1912. The association was created to allow old boys of the school to stay in touch with their proud history and stay in contact with friends and other boys high achievements long after they had left the school.<br>
                 </p>
-                <p id = 'viewmorep1'>
+                <p id = 'viewmorep1' class = 'viewmorep1'>
                     The old boys association was formed on the 19th of July, 1912. The association was created to allow old boys of the
                     school to stay in touch with their proud history and stay in contact with friends and other boys high achievements long
                     after they had left the school. The old boys association has also created the Altiora Peto Medal which is awarded to an old boy who best reflects the
